# hydra-modal-launcher

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
example/: README.md  custom_image.py  my_app.py  pyproject.toml
example/conf/: config.yaml  config_custom.yaml  config_pyproject.yaml  config_requirements.yaml
hydra_plugins/hydra_modal_launcher/: _modal_app.py  _paths.py  _worker.py  config.py  modal_launcher.py
tests/: conftest.py  test_e2e_env_passthrough.py  test_e2e_failure.py  test_modal_launcher.py
tests/e2e/: env_passthrough_app.py  failure_app.py
tests/e2e/conf/: config.yaml  env_passthrough.yaml
